Fix: Remove gutters
Remove extra spacing from columns

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -6,12 +6,12 @@
 .splash-one{
     background-color: red;
 }
-#delivery{
+.delivery{
     background-color: green;
     height: 50%;
-    margin-bottom: 15px;
+    /* margin-bottom: 15px; */
 }
-#contact{
+.contact{
     background-color: yellow;
     height: 50%;
 }
@@ -30,3 +30,13 @@
 .section-six{
     background-color: violet;
 }
+
+
+/* .no-gutters {
+    margin-right: 0;
+    margin-left: 0;
+} */
+.col, [class*="col-"] {
+      padding-right: 0;
+      padding-left: 0;
+    }
